--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column; 
     align-items: flex-start;
+    margin: 100px;
 }
 
 /* FLEX CONTAINER for the Input and Button */
@@ -25,6 +26,7 @@
     background-color: #f0f0f0;
     border: 1px solid #ccc;
     cursor: pointer;
+    border-radius: 8px;
 }
 
 /* 3. Styling the Timer Display (Already uses Flex) */
@@ -37,6 +39,7 @@
     display: flex;
     flex-direction: column; 
     align-items: center; 
+    
 }
 
 .value {
